userlabs/configmaps/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: userlabs-network-policy
spec:
  podSelector:
    matchLabels:
      user-jupyterlab: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: jupyterjsc
          podSelector:
            matchLabels:
              app: drf-k8smgr
      ports:
        - port: 56789
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
